tests/ui/discord-frontend/entity_macro/expected_colon_3.stderr
error: expected `:`
  --> tests/ui/discord-frontend/entity_macro/expected_colon_3.rs:40:39
   |
LL |     relates = [multiple "MemberEntity"]
   |                                       ^

error: aborting due to 1 previous error

